2.0.1 (2022-??-??)
    - reenabled TLS v1.0 and v1.1

2.0.0 (2022-03-11)
    - brand new UCL configuration system
    - added -U flag to specify arbitrary configuration on the command line
    - changed the on-disk format of E files to JSON
    - removed support for DNS-based autoconfiguration
    - added support for setting SASL options directly in the simta configuration
    - added support for statsd metric gathering
    - updated build system
    - updated LDAP code to use non-deprecated APIs
    - added most global delivery settings as per-domain settings
    - added associated domain support to alias expansion
    - removed compile-time procmail dependency
    - added support for DNS lists with multiple entry types
    - improved LDAP address comparison logic
    - improved CLI tool interface consistency
    - added support for multiple subaddress separators
    - improved handling of required "Postmaster" mailbox
    - fixed a "poison pill" bug, where a single consistently tempfailed message
      (e.g. due to a particular mailbox being throttled) would cause all of
      that domain's MXes to be marked as down. simta would then skip delivery of
      any remaining messages in that host queue.
    - corrected the error code returned for unsupported MAIL/RCPT extensions
    - separated delivery timeouts for the fast queue and other queues
    - removed support for reading E files from simta 0.10.0 or older

1.5.0 (2020-11-30)
    - fixed crash from bad bugfix
    - added per-domain limits on recipients per message delivery attempt

1.4.6 (2020-10-19)
    - fixed crash when a block DNSL did not have a default reason set
    - added a standard log line at the start of each mail transaction

1.4.5 (2020-08-14)
    - fixed minor issue with generated message IDs

1.4.4 (2020-03-03)
    - fixed issue where messages weren't always locked while delivery was occurring
    - added authenticated user canonicalization

1.4.3 (2020-02-06)