@@ -1,5 +1,6 @@
 2.0.1 (2022-??-??)
     - reenabled TLS v1.0 and v1.1
+    - fixed unique PIDs
 
 2.0.0 (2022-03-11)
     - brand new UCL configuration system
